# swmap

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  swmap.py
config/: __init__.py  constants.py  patterns.py  risk_patterns.py  sensitive_keywords.py
scripts/: benchmark.py  install.ps1  install.sh  update_patterns.py
src/core/: __init__.py  analyzer.py  ast_analyzer.py  enhanced_analyzer.py  fetcher.py  headless_analyzer.py  normalizer.py  parser.py  risk_assessor.py  scanner.py  security_analyzer.py
src/models/: __init__.py  exceptions.py  result.py  risk_models.py  target.py
src/utils/: __init__.py  deobfuscator.py  logger.py  output_formatter.py  pattern_matcher.py  scope_calculator.py  validator.py
