[build-system]
requires = ["setuptools>=69", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "swmap"
dynamic = ["version"]
description = "Service Worker Security Analyzer - Advanced reconnaissance tool for Service Worker security assessment"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SWMap Security", email = "security@swmap.dev" }]
keywords = [
  "security",
  "service-worker",
  "pwa",
  "reconnaissance",
  "bug-bounty",
  "penetration-testing",
  "web-security",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]

dependencies = [
  "requests>=2.28.0",
  "urllib3>=1.26.0",
  "httpx>=0.26.0",
  "chardet>=5.2.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "rich>=13.0.0",
  "brotlicffi>=1.1.0; platform_python_implementation != 'PyPy'",
  "brotli>=1.1.0; platform_python_implementation == 'PyPy'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
]

headless = [
  "playwright>=1.36.0",
]

full = [
  "psutil>=5.9.0; sys_platform != 'win32'",
  "colorama>=0.4.6; sys_platform == 'win32'",
]

enhanced = [
  "psutil>=5.9.0; sys_platform != 'win32'",
  "colorama>=0.4.6; sys_platform == 'win32'",
  "playwright>=1.36.0",
]

perf = [
  "orjson>=3.10.0",
]

[project.urls]
Documentation = "https://github.com/bl4ck0w1/swmap/wiki"
Source = "https://github.com/bl4ck0w1/swmap"
Tracker = "https://github.com/bl4ck0w1/swmap/issues"

[project.scripts]
swmap = "swmap:main"

[tool.setuptools.dynamic]
version = { attr = "config.constants.get_version" }

[tool.setuptools.packages.find]
include = ["src", "src.*", "config", "config.*"]
exclude = ["tests*"]

[tool.setuptools.package-dir]
src = "src"
config = "config"

[tool.setuptools]
py-modules = ["swmap"]
include-package-data = true

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = "(?x)(^build/|^dist/|^node_modules/|^\\.venv/)"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]


